Fix broken layout of Work Environment

--- a/public_html/html/css/style.less
+++ b/public_html/html/css/style.less
@@ -22,6 +22,9 @@
 	-moz-border-radius: @radius;
 	border-radius: @radius;
 }
+.clearfix {
+	clear: both;
+}
 
 /* iPhone 6 */
 @media only screen and (max-device-width: 667px)
